[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "python-ttest"
version         = "1.0.0"
description     = "A Python package specifically for Student's t-test."
readme          = "README.md"
authors         = [{name = "Crowthebird"}]
license         = {file = "LICENSE"}
classifiers     = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
keywords        = ["ttest", "student", "t-test"]
requires-python = ">=3.9"

[project.urls]
Source = "https://github.com/thatbirdguythatuknownot/python-t-test/"
